added new features fix bugs

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: Arial, Helvetica, sans-serif !important;
 }
 
+#nav-bar {
+    transition: all 0.5s;
+}
+
 .nav-item > a:hover {
     color: #ffb800;
 }
@@ -53,12 +57,14 @@ button {
 h1 {
     letter-spacing: 0.2rem;
     line-height: 3rem;
-    color: white;
     font-weight: bold;
     font-size: 3rem;
 }
 h5 {
-    color: white;
+    font-size: 1.8rem;
+}
+h2 {
+    font-weight: 600;
 }
 
 h2,
@@ -67,7 +73,7 @@ h3 {
 }
 h4 {
     color: #d4d4d4;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -127,13 +133,9 @@ h6 {
     -moz-box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
 }
 
-.car-image-top {
-    object-fit: cover;
-}
-
 .card-body {
     position: absolute;
-    max-height: 3rem;
+    max-height: 2.5rem;
     bottom: 0;
     right: 0;
     left: 0;
@@ -156,6 +158,81 @@ p {
     transition: filter 0.5s;
 }
 
+.services-contact p {
+    letter-spacing: 1.5px;
+    line-height: 2.5rem;
+    font-size: 1.3rem;
+}
+
+.img-services {
+    height: 10rem;
+    padding: 1rem;
+}
+
+.card-contact {
+    background-color: #0000000a;
+    box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.247);
+    -webkit-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.247);
+    -moz-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.247);
+    border-radius: 0.5rem;
+    height: auto;
+}
+
+.contact-form input,
+textarea {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.5rem;
+    margin: 10px;
+    border: 0;
+    box-shadow: 0px 0px 28px 0px rgba(155, 154, 154, 0.35);
+    -webkit-box-shadow: 0px 0px 28px 0px rgba(155, 154, 154, 0.35);
+    -moz-box-shadow: 0px 0px 28px 0px rgba(155, 154, 154, 0.35);
+    border-radius: 3px;
+    transition: box-shadow 0.5s;
+}
+.contact-form input::placeholder,
+textarea::placeholder {
+    opacity: 0.5;
+}
+
+.contact-form input:hover {
+    box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.35);
+}
+
+.contact-form input {
+    height: 2rem;
+}
+.foot-contain {
+    border-top: 0.5px solid rgba(150, 150, 150, 0.247);
+}
+
+.pre-foot h4 {
+    font-size: 1.2rem;
+    text-decoration: underline;
+}
+
+.card-foot h4 {
+    font-size: 1rem;
+}
+
+.decoration-none {
+    text-decoration: none;
+    color: #ffb800;
+    font-weight: 600;
+}
+
+.socials img {
+    width: 30px;
+    height: 30px;
+    margin: 0.5rem;
+    transition: all 0.5s;
+}
+.socials img:hover {
+    transform: scale(1.2);
+}
+
 /* Media Query */
 
 @media only screen and (max-width: 1025px) {
@@ -164,6 +241,4 @@ p {
         min-width: 100%;
         border-radius: 50%;
     }
-}
-@media only screen and (max-width: 1280px) {
 }
