--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     font-family: Arial, Helvetica, sans-serif !important;
 }
+a {
+    text-decoration: none;
+}
 
 #nav-bar {
     transition: all 0.5s;
@@ -11,7 +14,6 @@
 }
 button {
     font-weight: 600;
-    padding: 2px !important;
 }
 
 .button-one {
